Run connection resource on worker pool