@@ -1,5 +1,7 @@
 package io.confluent.idesidecar.restapi.resources;
 
+import static io.confluent.idesidecar.restapi.util.MutinyUtil.uniStage;
+
 import io.confluent.idesidecar.restapi.connections.ConnectionState;
 import io.confluent.idesidecar.restapi.connections.ConnectionStateManager;
 import io.confluent.idesidecar.restapi.exceptions.ConnectionNotFoundException;
@@ -8,8 +10,9 @@ import io.confluent.idesidecar.restapi.exceptions.Failure;
 import io.confluent.idesidecar.restapi.models.Connection;
 import io.confluent.idesidecar.restapi.models.ConnectionSpec;
 import io.confluent.idesidecar.restapi.models.ConnectionsList;
+import io.quarkus.logging.Log;
 import io.smallrye.mutiny.Uni;
-import io.vertx.core.Future;
+import io.smallrye.mutiny.infrastructure.Infrastructure;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
@@ -20,6 +23,10 @@ import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
+import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionStage;
+import java.util.stream.Collectors;
 import org.eclipse.microprofile.openapi.annotations.media.Content;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
@@ -41,20 +48,28 @@ public class ConnectionsResource {
   @GET
   @Produces(MediaType.APPLICATION_JSON)
   public Uni<ConnectionsList> listConnections() {
-    var connections = connectionStateManager
-        .getConnectionStates()
-        .stream()
-        .map(connection -> getConnectionModel(connection.getSpec().id()))
-        .toList();
+    return Uni.createFrom()
+        .item(() -> connectionStateManager.getConnectionStates())
+        .onItem().transformToUni(connectionStates -> {
+          var connectionFutures = connectionStates
+              .stream()
+              .map(connection -> Uni
+                  .createFrom()
+                  .completionStage(() -> getConnectionModel(connection.getSpec().id())))
+              .collect(Collectors.toList());
 
-    Future<ConnectionsList> future = Future.future(handler ->
-        Future
-            .join(connections)
-            .onSuccess(result -> handler.complete(ConnectionsList.from(result.list())))
-            .onFailure(handler::fail)
-    );
-
-    return Uni.createFrom().completionStage(future.toCompletionStage());
+          return Uni
+              .combine()
+              .all()
+              .unis(connectionFutures)
+              .with(connections -> {
+                List<Connection> connectionList = connections.stream()
+                    .map(connection -> (Connection) connection)
+                    .collect(Collectors.toList());
+                return new ConnectionsList(connectionList);
+              });
+        })
+        .runSubscriptionOn(Infrastructure.getDefaultWorkerPool());
   }
 
   @POST
@@ -71,9 +86,13 @@ public class ConnectionsResource {
   @Path("/{id}")
   @Produces(MediaType.APPLICATION_JSON)
   public Uni<Connection> getConnection(@PathParam("id") String id) {
+    Log.infof(
+        "Handling get connection request for thread %d",
+        Thread.currentThread().threadId());
     return Uni
         .createFrom()
-        .completionStage(getConnectionModel(id).toCompletionStage());
+        .completionStage(() -> getConnectionModel(id))
+        .runSubscriptionOn(Infrastructure.getDefaultWorkerPool());
   }
 
   @PUT
@@ -113,8 +132,8 @@ public class ConnectionsResource {
   public Uni<Connection> updateConnection(@PathParam("id") String id, ConnectionSpec spec) {
     return connectionStateManager
         .updateSpecForConnectionState(id, spec)
-        .chain(ignored ->
-            Uni.createFrom().completionStage(getConnectionModel(id).toCompletionStage()));
+        .chain(ignored -> uniStage(() -> getConnectionModel(id)))
+        .runSubscriptionOn(Infrastructure.getDefaultWorkerPool());
   }
 
   @DELETE
@@ -123,15 +142,16 @@ public class ConnectionsResource {
     connectionStateManager.deleteConnectionState(id);
   }
 
-  private Future<Connection> getConnectionModel(String id) {
+  private CompletionStage<Connection> getConnectionModel(String id) {
     try {
       ConnectionState connectionState = connectionStateManager.getConnectionState(id);
 
       return connectionState
           .getConnectionStatus()
-          .map(connectionStatus -> Connection.from(connectionState, connectionStatus));
+          .map(connectionStatus -> Connection.from(connectionState, connectionStatus))
+          .toCompletionStage();
     } catch (ConnectionNotFoundException e) {
-      return Future.failedFuture(e);
+      return CompletableFuture.failedFuture(e);
     }
   }
 }
